[package]
name = "lsys-web-module-oauth"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"

[dependencies]
lsys-core = { path = "../../lsys-core" }
lsys-web = { path = "../../lsys-web" }
lsys-setting = { path = "../../lsys-setting" }
lsys-rbac = { path = "../../lsys-rbac" }
lsys-user = { path = "../../lsys-user" }
lsys-access = { path = "../../lsys-access" }
serde = { version = "1.0.*" }
serde_json = "1.0.*"
#日志
tracing = { version = "0.1.*", features = [
    "log",
] } # log-always 保持log的输出 当使用tracing时会出现两次
async-trait = "0.1.57"
config = "~0.15"


redis = { version = "~0.31.0" }


urlencoding = { version = "2.1.0" }


reqwest = { version = "~0.12.9", features = ["json", "stream"] }


sqlx = { version = "~0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
