[package]
name = "lsys-web-subapp-demo"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-rbac = { path = "../../lsys-rbac" }
lsys-app = { path = "../../lsys-app" }
lsys-web = { path = "../../lsys-web" }
lsys-core = { path = "../../lsys-core" }
lsys-app-sender = { path = "../../lsys-app-sender" }
serde = { version = "1.0.*" }
serde_json = "1.0.*"


async-trait = "0.1.57"
