[package]
name = "area-axum"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.6.19" }
tokio = { version = "1.0", features = ["full"] }
lsys-lib-area = { version = "0.1.*", path = "../../", features = [
    "data-csv",
    "index-disk",
] }
serde = { version = "1.0.*" }
serde_json = "1.0.*"
